Added canvas and resizing mechanism.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
+<link rel="stylesheet" href="index.css">
 <script src="./compiled.js" defer></script>
-Henlo, world!
+<canvas>Plz use a modern browser, k thanks bye.</canvas>
